[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "GroupedNewton"
version = "0.0.2"
dependencies = [
  "torch>=2.1.0",
  "torchvision>=0.15.1",
  "numpy>=1.23.5",
  "scipy>=1.10.1",
#  "hydra>=1.3.2",
  "omegaconf>=2.2.3",
]
requires-python = ">=3.8"
authors = [
  {name = "Pierre Wolinski", email = "pierre.wolinski@normalesup.org"},
]
maintainers = [
  {name = "Pierre Wolinski", email = "pierre.wolinski@normalesup.org"},
]
description = "Variant of Newton's method with grouped parameters"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["optimization", "machine learning", "deep learning", "Hessian", "Newton's method"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python"
]

[tool.hatch.build.targets.wheel]
packages = ["src/grnewt"]

[project.urls]
Homepage = "https://github.com/p-wol/GroupedNewton"
Documentation = "https://github.com/p-wol/GroupedNewton"
Repository = "https://github.com/p-wol/GroupedNewton"
